[package]
name = "grok-mermaid"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Mermaid diagrams as Unicode box-drawing art, extracted from xai-org/grok-build"
repository = "https://github.com/simonw/tools"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unicode-width = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
